<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:padding="20dp"
    android:paddingBottom="20dp"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvBarcode_dialog_attributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="" />

    <TextView
        android:id="@+id/tvMaterial_dialog_attributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/tvMaterialText_dialog_attributes" />

    <TextView
        android:id="@+id/tvThickness_dialog_attributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/tvThicknessText_dialog_attributes" />

    <TextView
        android:id="@+id/tvLength_dialog_attributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/tvLengthText_dialog_attributes" />

    <TextView
        android:id="@+id/tvWidth_dialog_attributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/tvWidthText_dialog_attributes" />

    <TextView
        android:id="@+id/tvArea_dialog_attributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/tvAreaText_dialog_attributes" />

    <TextView
        android:id="@+id/tvQty_dialog_attributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/tvQtyText_dialog_attributes" />

\



</LinearLayout>