<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <TextView
            android:id="@+id/tvScannedSteelSheetsQty_fragment_pull_out_steel_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvScannedSteelSheetsQtyText_fragment_pull_out_steel_sheet"
            android:textSize="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edtSteelSheetsQty_dialog_process_actions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edtSteelSheetsQty_dialog_process_actions"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edtSteelSheetsQtyHint_fragment_add"
            android:inputType="numberDecimal"

            app:layout_constraintTop_toBottomOf="@id/tvScannedSteelSheetsQty_fragment_pull_out_steel_sheet"
            app:layout_constraintBottom_toTopOf="@id/btnReturnToWarehouse_dialog_process_actions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnAddToQty_dialog_process_actions"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_add_substract"
            android:drawableTop="@drawable/ic_add_qty_lapis_lazuli_50dp"

            app:layout_constraintBottom_toBottomOf="@id/edtSteelSheetsQty_dialog_process_actions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edtSteelSheetsQty_dialog_process_actions" />

        <Button
            android:id="@+id/btnSubtractFromQty_dialog_process_actions"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_add_substract"
            android:drawableTop="@drawable/ic_substract_qty_lapis_lazuli_24dp"

            app:layout_constraintBottom_toBottomOf="@id/edtSteelSheetsQty_dialog_process_actions"
            app:layout_constraintEnd_toStartOf="@id/edtSteelSheetsQty_dialog_process_actions"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btnReturnToWarehouse_dialog_process_actions"
            android:layout_width="300dp"
            android:layout_height="75dp"
            android:background="@drawable/btn_rounded_corners"
            android:text="@string/btnReturnToWarehouse_dialog_process_actions"
            android:textColor="@color/colorButtonText"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"

            app:layout_constraintTop_toBottomOf="@id/edtSteelSheetsQty_dialog_process_actions"
            app:layout_constraintBottom_toTopOf="@id/btnSetSteelSheetAsProcessed_dialog_process_actions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btnSetSteelSheetAsProcessed_dialog_process_actions"
            android:layout_width="300dp"
            android:layout_height="75dp"
            android:background="@drawable/btn_rounded_corners"
            android:text="@string/btnSetSteelSheetAsProcessed_dialog_process_actions"
            android:textColor="@color/colorButtonText"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="150dp"

            app:layout_constraintTop_toBottomOf="@id/btnReturnToWarehouse_dialog_process_actions"
            app:layout_constraintBottom_toTopOf="@id/btnCancel_dialog_locations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnCancel_dialog_locations"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_rounded_corners"
            android:text="@string/btnCancelText_dialog_locations"
            android:textColor="@color/colorButtonText"
            android:textSize="18dp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>