<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    tools:context=".View.ManageSteelSheetFragment">

        <Button
            android:id="@+id/btnPullOut_fragment_manage_steel_sheet"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_rounded_corners"
            android:text="@string/btnPullOutText_fragment_manage_steel_sheet"
            android:textColor="@color/colorButtonText"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnReturn_fragment_manage_steel_sheet"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />


        <Button
            android:id="@+id/btnReturn_fragment_manage_steel_sheet"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_rounded_corners"
            android:text="@string/btnReturnText_fragment_manage_steel_sheet"
            android:textColor="@color/colorButtonText"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/btnPullOut_fragment_manage_steel_sheet"
            app:layout_constraintBottom_toTopOf="@id/btnBack_fragment_manage_steel_sheet"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />


        <Button
            android:id="@+id/btnBack_fragment_manage_steel_sheet"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_rounded_corners"
            android:text="@string/btnBackText_fragment_show"
            android:textColor="@color/colorButtonText"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>