<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    tools:context=".View.MainFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"

        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/btnAdd_main_fragment"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:background="@drawable/btn_rounded_corners"
            android:drawableTop="@drawable/ic_add_box_lapis_lazuli_64dp"
            android:text="@string/btnAddText_fragment_main"
            android:textColor="@color/colorButtonText"
            android:textSize="30dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnShow_main_fragment"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/btn_rounded_corners"
            android:drawableTop="@drawable/ic_search_lapis_lazuli_64dp"
            android:text="@string/btnShowText_fragment_main"
            android:textColor="@color/colorButtonText"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnManage_main_fragment"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/btn_rounded_corners"
            android:drawableTop="@drawable/ic_reorder_lapis_lazuli_64dp"
            android:text="@string/btnManageText_fragment_main"
            android:textColor="@color/colorButtonText"
            android:textSize="30dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/ivCompanyLogo_main_fragment"
        android:layout_width="160dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343"
        tools:src="@drawable/zbud_logo" />




</androidx.constraintlayout.widget.ConstraintLayout>