<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    tools:context=".View.AddSteelSheetsFragment">

    <EditText
        android:id="@+id/edtBarcodeScanField_fragment_add"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/edtBarcodeScanFieldHint_fragment_pull_out_steel_sheet"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnWarehouseList_fragment_add"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShowKeyboard_fragment_add" />

    <Spinner
        android:id="@+id/spnSectorsList_fragment_add"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnWarehouseList_fragment_add" />

    <Spinner
        android:id="@+id/spnSubsectorsList_fragment_add"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnSectorsList_fragment_add" />

    <Button
        android:id="@+id/btnSendToDataBase_fragment_add"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/btn_rounded_corners"
        android:text="@string/btnAddText_fragment_add"
        android:drawableTop="@drawable/ic_add_lapis_lazuli_64dp"
        android:textColor="@color/colorButtonText"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnBack_fragment_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBack_fragment_add"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_rounded_corners"
        android:text="@string/btnBack_fragment_add"
        android:textColor="@color/colorButtonText"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnShowKeyboard_fragment_add"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_rounded_corners"
        android:drawableTop="@drawable/ic_keyboard_lapis_lazuli_64dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtSteelSheetsQty_fragment_add"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/edtSteelSheetsQtyHint_fragment_add"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/btnSendToDataBase_fragment_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnSubsectorsList_fragment_add" />

    <Button
        android:id="@+id/btnAddToQty_fragment_add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_add_substract"
        android:drawableTop="@drawable/ic_add_qty_lapis_lazuli_50dp"
        android:text=""

        app:layout_constraintBottom_toTopOf="@+id/btnSendToDataBase_fragment_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtSteelSheetsQty_fragment_add"
        app:layout_constraintTop_toBottomOf="@+id/spnSubsectorsList_fragment_add" />

    <Button
        android:id="@+id/btnSubtractFromQty_fragment_add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_add_substract"
        android:drawableTop="@drawable/ic_substract_qty_lapis_lazuli_24dp"
        android:text=""

        app:layout_constraintBottom_toTopOf="@+id/btnSendToDataBase_fragment_add"
        app:layout_constraintEnd_toStartOf="@+id/edtSteelSheetsQty_fragment_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnSubsectorsList_fragment_add" />

    <TextView
        android:id="@+id/tvScannedSteelSheetsQty_fragment_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ilość:"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/edtSteelSheetsQty_fragment_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>